# MINIBB

./: .env.example  .gitignore  CLAUDE.md  CLAUDE_CODE_PROMPT.md  README.md  WORKFLOW.md  pyproject.toml  sample format.html
Bloomberg Functions/: 00_INDEX.md  01_General_Navigation.md  02_Equity.md  03_Fixed_Income.md  04_FX.md  05_Commodities.md  06_Derivatives_Options.md  07_Credit.md  08_Money_Markets.md  09_Municipal.md  10_Index.md  11_Funds.md  12_Economics.md  13_News_Research.md  14_Portfolio_Risk.md  15_Excel_API.md
Schema for stocks analysis/: listed_company.schema.json  listed_company_schema_reference.md  pfizer_sample.json
reports/: 00627_20260430.html  600221_20260430.html  9147_20260429.md  9434_20260430.html  AAPL_20260429.md  AAPL_20260430.html  DBS_20260430.html
scripts/: demo_cli.sh  probe_data.py
src/mini_bloomberg/: config.py
src/mini_bloomberg/agents/: orchestrator.py  prompts.py  tools.py
src/mini_bloomberg/cli/: app.py  dispatcher.py  repl.py
src/mini_bloomberg/core/: cache.py  errors.py  session.py  ticker.py
src/mini_bloomberg/data/: equity_estimates.py  equity_fundamentals.py  equity_peers.py  equity_price.py  equity_profile.py  equity_report.py  schemas.py
src/mini_bloomberg/data/providers/: fmp_provider.py  openbb_provider.py
src/mini_bloomberg/functions/: anr.py  base.py  comp.py  des.py  fa.py  gp.py  rpt.py  rv.py
src/mini_bloomberg/render/: cli_renderer.py  html_renderer.py  json_renderer.py  markdown_renderer.py
