[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mini-bloomberg"
version = "0.1.0"
description = "CLI Bloomberg Terminal emulator powered by OpenBB, FMP, and Claude"
requires-python = ">=3.11"
dependencies = [
    # Data
    "openbb>=4.3",
    "httpx>=0.27",          # replaces requests; async support for COMP parallel fetching
    "pydantic>=2.8",
    "pydantic-settings>=2.3",
    # CLI
    "typer>=0.12",
    "rich>=13.7",
    "plotext>=5.2",
    "prompt-toolkit>=3.0",
    # LLM
    "anthropic>=0.40",
    # Infra
    "diskcache>=5.6",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
mini-bb = "mini_bloomberg.cli.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mini_bloomberg"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
